0.0.19

* Add lenses to latitude/longitude minutes/seconds

0.0.18

* Update dependency on `radian`.

0.0.17

* Include prisms for radians. Requires a dependency on the `radian` package.

0.0.16

* Some minor fixes to the documentation.

0.0.15

* Change mod functions to use rem.

0.0.14

* Add mod functions for `DegreesLatitude` and `DegreesLongitude`.

0.0.13

* Tidy up imports
:
* Tidy up code duplication

0.0.12

* Remove extraneous frac Prism

0.0.11

* Use Optic to overload lenses, prisms and isos.

* Remove use of radians (for now).

0.0.10

This change log started.
