@@ -1,5 +1,5 @@
 name:               coordinate
-version:            0.0.18
+version:            0.0.19
 license:            BSD3
 license-file:       LICENCE
 author:             Tony Morris <ʇǝu˙sıɹɹoɯʇ@ןןǝʞsɐɥ>
